# OpenMedia-CMake

./: .travis.yml  CMakeLists.txt  script.sh
cmake/: ProjectWarnings.cmake
someExeDir/: CMakeLists.txt  main.cpp
someLibDir/: CMakeLists.txt  someLib.cpp  someLib.h
someTests/: CMakeLists.txt  main.cpp  test.cpp
